--- a/_posts/2022-12-11-Test.md
+++ b/_posts/2022-12-11-Test.md
@@ -2,8 +2,16 @@
 title: Test
 tags: [Test]
 comments: true
-style: border # style: fill / border (choose one only)
+style: border # style: fill/border (choose one only)
 color: danger # color: primary/secondary/success/danger/warning/info/light/dark (blue/gray/green/red/yellow/cyan/white/black)
 description: Test.
 # external_url:
 ---
+
+# Test
+
+
+
+ {% pdf "http://img.labnol.org/di/PowerPoint.ppt" %}
+
+
